[gd_scene load_steps=27 format=3 uid="uid://cfkdwoeogdfrg"]

[ext_resource type="Script" path="res://Scripts/Player.gd" id="1_5wf1j"]
[ext_resource type="Texture2D" uid="uid://gbev21oot5ir" path="res://Assets/Barbar.webp" id="2_p6g5f"]
[ext_resource type="PackedScene" uid="uid://7e0odiarlhle" path="res://Scenes/hurtBox.tscn" id="3_tws2k"]
[ext_resource type="PackedScene" uid="uid://cvcgtb6nd37pw" path="res://Scenes/healthComponent.tscn" id="4_rtmjx"]
[ext_resource type="PackedScene" uid="uid://cf7eyl4l1ev8m" path="res://Scenes/SwingAttack.tscn" id="5_kvv8y"]
[ext_resource type="PackedScene" uid="uid://did1lmobv5wea" path="res://Scenes/hitBox.tscn" id="6_bfvta"]
[ext_resource type="PackedScene" uid="uid://b2qct6hmm5r5f" path="res://Scenes/attack_animation.tscn" id="7_1wna8"]
[ext_resource type="PackedScene" uid="uid://uupo25iybxej" path="res://Scenes/wut_bar.tscn" id="7_kato8"]
[ext_resource type="PackedScene" uid="uid://cmanjc3vgiqtf" path="res://Scenes/HpBar.tscn" id="8_jxtd3"]
[ext_resource type="FontFile" uid="uid://c18owl8guvbr5" path="res://Assets/PixelifySans-VariableFont_wght.ttf" id="9_ds474"]
[ext_resource type="Texture2D" uid="uid://ewxqks1odpba" path="res://Assets/Licht_Sprite.png" id="10_3bxsi"]
[ext_resource type="PackedScene" uid="uid://bfnfpt64lq3gd" path="res://fader.tscn" id="12_1efje"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_2i6sg"]
radius = 2.0
height = 16.0

[sub_resource type="CircleShape2D" id="CircleShape2D_t7cs5"]
radius = 15.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_owme6"]
height = 48.0

[sub_resource type="AtlasTexture" id="AtlasTexture_dw056"]
atlas = ExtResource("10_3bxsi")
region = Rect2(0, 0, 48, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_xpb2s"]
atlas = ExtResource("10_3bxsi")
region = Rect2(48, 0, 48, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_w657n"]
atlas = ExtResource("10_3bxsi")
region = Rect2(96, 0, 48, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_rxgbo"]
atlas = ExtResource("10_3bxsi")
region = Rect2(144, 0, 48, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_tcfq0"]
atlas = ExtResource("10_3bxsi")
region = Rect2(192, 0, 48, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_8hore"]
atlas = ExtResource("10_3bxsi")
region = Rect2(240, 0, 48, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_gumud"]
atlas = ExtResource("10_3bxsi")
region = Rect2(288, 0, 48, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_qcv6g"]
atlas = ExtResource("10_3bxsi")
region = Rect2(336, 0, 48, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_01i6u"]
atlas = ExtResource("10_3bxsi")
region = Rect2(384, 0, 48, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_8mfh3"]
atlas = ExtResource("10_3bxsi")
region = Rect2(432, 0, 48, 50)

[sub_resource type="SpriteFrames" id="SpriteFrames_7l5ov"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dw056")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xpb2s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w657n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rxgbo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tcfq0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8hore")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gumud")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qcv6g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_01i6u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8mfh3")
}],
"loop": true,
"name": &"default",
"speed": 10.0
}]

[node name="Player" type="CharacterBody2D" groups=["Player"]]
z_index = 1
y_sort_enabled = true
collision_layer = 18
collision_mask = 21
script = ExtResource("1_5wf1j")

[node name="Barbar" type="Sprite2D" parent="."]
position = Vector2(-1, -12)
texture = ExtResource("2_p6g5f")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1, 2)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_2i6sg")

[node name="HurtBox" parent="." node_paths=PackedStringArray("healthComponent") instance=ExtResource("3_tws2k")]
collision_layer = 2
collision_mask = 0
healthComponent = NodePath("../healthComponent")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
shape = SubResource("CircleShape2D_t7cs5")
debug_color = Color(0.517058, 0, 0.0865408, 0.42)

[node name="healthComponent" parent="." instance=ExtResource("4_rtmjx")]

[node name="UtilityCouldown" type="Timer" parent="."]
one_shot = true

[node name="WeaponCooldown" type="Timer" parent="."]
one_shot = true

[node name="Attack" parent="." node_paths=PackedStringArray("Hitbox") instance=ExtResource("5_kvv8y")]
weaponArt = "Dolch"
Hitbox = NodePath("HitBox")

[node name="HitBox" parent="Attack" node_paths=PackedStringArray("parent") instance=ExtResource("6_bfvta")]
dmg = 12.0
parent = NodePath("../..")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Attack/HitBox"]
position = Vector2(45, 0)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_owme6")
disabled = true

[node name="AttackAnimation" parent="Attack" instance=ExtResource("7_1wna8")]
visible = false

[node name="Camera2D" type="Camera2D" parent="."]

[node name="WutBar" parent="." instance=ExtResource("7_kato8")]
z_index = 4
offset_left = -252.0
offset_top = -132.0
offset_right = -220.0
offset_bottom = -100.0
scale = Vector2(3, 3)

[node name="HpBar" parent="." instance=ExtResource("8_jxtd3")]
z_index = 4
offset_left = -252.0
offset_top = -173.0
offset_right = -220.0
offset_bottom = -141.0
scale = Vector2(3, 3)

[node name="Label" type="Label" parent="."]
z_index = 4
offset_left = -154.0
offset_top = -96.0
offset_right = -76.0
offset_bottom = -71.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 8
theme_override_fonts/font = ExtResource("9_ds474")
theme_override_font_sizes/font_size = 20
text = "100/ 100"

[node name="HpLabel" type="Label" parent="."]
z_index = 4
offset_left = -154.0
offset_top = -136.0
offset_right = -58.0
offset_bottom = -111.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 8
theme_override_fonts/font = ExtResource("9_ds474")
theme_override_font_sizes/font_size = 20
text = "100/ 100"

[node name="Attack1Timer" type="Timer" parent="."]
one_shot = true

[node name="Attack2Timer" type="Timer" parent="."]
one_shot = true

[node name="Attack3Timer" type="Timer" parent="."]
one_shot = true

[node name="Attack4Timer" type="Timer" parent="."]
one_shot = true

[node name="SupportTimer" type="Timer" parent="."]
one_shot = true

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
visible = false
position = Vector2(-3, -8)
sprite_frames = SubResource("SpriteFrames_7l5ov")
frame_progress = 0.617334

[node name="Fader" parent="." instance=ExtResource("12_1efje")]
start = true
